fixing carousel on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -177,6 +177,7 @@ i { font-family: 'Caslon' !important; }
         flex-direction: column;
         padding-left: 20px;
         padding-right: 20px;
+        width: calc(100% - 40px);
       }
 
       .main-menu ul {
@@ -736,6 +737,7 @@ i { font-family: 'Caslon' !important; }
       left: 0;
       right: 0;
       margin: 0 auto;
+      bottom: 0;
     }
   }
 
@@ -823,15 +825,16 @@ i { font-family: 'Caslon' !important; }
     }
 
     .gallery-text {
+      position: relative;
       margin-top: 15px;
       padding-bottom: 30px;
     }
 
-    .gallery-text {
+    /*.gallery-text {
       position: absolute;
       bottom: 150px;
       margin-top: auto;
-    }
+    }*/
 
     .m-scooch.m-fluid > .m-scooch-inner > * {
       text-align: center;
@@ -1462,6 +1465,12 @@ i { font-family: 'Caslon' !important; }
       font-family: 'Conv_Zagolovochnaya W01 Book', Times, serif;
       display: none;
       font-size:11px;
+    }
+
+    @media (max-width: 600px) {
+      #container-p {
+        position: relative;
+      }
     }
 
 
